--- a/project-4.css
+++ b/project-4.css
@@ -1,5 +1,3 @@
-
-
 * {
     box-sizing: border-box;
   }
@@ -94,24 +92,28 @@ textarea
         display: block;
         width: 100vw;
         margin: 0%;
-        padding: 0%;
+        padding: 0em 0em 2em 0em;
+        font-size: 20px;
+
         
     }
     #main{
         padding: 0.5em 1em 1em 1em;
-        width: 80vw;
+        width: 90vw;
         
     }
     div>.field
     {
         display: block;
-        width: 100%;       
+        width: 100%;   
+        padding: 0em 1em;    
     }
     .field-1
     {
         text-align: left;
-        padding: .5em 0em;
+        padding: 0em 0em;
     }
+ 
     .feild-2{
         width: 100%;
         margin: 0px;
@@ -119,5 +121,16 @@ textarea
     input[type= text]
     {
         width: 100%;
+        padding: .5em 1em;
+        border-radius: .25em;
+    }
+    textarea
+    {
+        width: 100%;
+        border-radius: .25px; 
+    }
+    div.field-1{
+        width: 100%;
+        margin-bottom: inherit;
     }
 }
