--- a/project-4.css
+++ b/project-4.css
@@ -93,7 +93,7 @@ textarea
         width: 100vw;
         margin: 0%;
         padding: 0em 0em 2em 0em;
-        font-size: 20px;
+        font-size: 1em;
 
         
     }
